--- a/SallesWebMvc/SallesWebMvc/appsettings.json
+++ b/SallesWebMvc/SallesWebMvc/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SallesWebMvcContext": "Server=localhost;UserId=root;Password=mbsogdnp;DataBase=bancoteste"
+  }
 }
