--- a/SallesWebMvc/SallesWebMvc/appsettings.json
+++ b/SallesWebMvc/SallesWebMvc/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SallesWebMvcContext": "Server=localhost;UserId=root;Password=1234;DataBase=BDSallesWeb"
+    "SallesWebMvcContext": "Server=localhost;UserId=root;Password=mbsogdnp;DataBase=BDSallesWeb"
   }
 }
