adicionado sellerservice com findall para retornar todos os vendedores e adicionada view de vendedores

--- a/SallesWebMvc/SallesWebMvc/appsettings.json
+++ b/SallesWebMvc/SallesWebMvc/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SallesWebMvcContext": "Server=localhost;UserId=root;Password=mbsogdnp;DataBase=BDSallesWeb"
+    //focus"SallesWebMvcContext": "Server=localhost;UserId=root;Password=mbsogdnp;DataBase=BDSallesWeb",
+    "SallesWebMvcContext": "Server=localhost;UserId=root;Password=1234;DataBase=BDSallesWeb"
   }
 }
