--- a/SallesWebMvc/SallesWebMvc/appsettings.json
+++ b/SallesWebMvc/SallesWebMvc/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SallesWebMvcContext": "Server=localhost;UserId=root;Password=mbsogdnp;DataBase=BDSallesWeb"
-    //casa"SallesWebMvcContext": "Server=localhost;UserId=root;Password=1234;DataBase=BDSallesWeb"
+    //focus"SallesWebMvcContext": "Server=localhost;UserId=root;Password=mbsogdnp;DataBase=BDSallesWeb"
+    "SallesWebMvcContext": "Server=localhost;UserId=root;Password=1234;DataBase=BDSallesWeb"
   }
 }
